SERVER-12226 FTSSpec::fixSpec() text index suffix allow {a:-1} keys

Previously, only ascending keys were allowed in the key pattern
suffix for text indexes.  Descending keys now allowed.